--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
    CSS Variables
    ========================= */
 :root {
+  
   --primary-color: #6aaadf;
   --secondary-color: #C7E3F8;
   --accent-color: #5B9DD9;
@@ -284,14 +285,13 @@ tr:hover {
 }
 
 .responsive-dialog-wrapper {
-  max-width: 100%;
-  width: 100%;
+  max-width: 75%;
+  width: 75%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 @media screen and (max-width: 950px) {
   ::ng-deep .mat-dialog-container {
     max-width: 100vw !important;
@@ -311,7 +311,20 @@ tr:hover {
     flex-direction: column !important;
   }
 }
-
+/* Transparent dialog panel */
+.transparent-dialog {
+  .mat-mdc-dialog-container,
+  .mat-dialog-container {
+    background: transparent !important;
+    box-shadow: none !important;
+    border-radius: 0 !important;
+  }
+  
+  .mat-mdc-dialog-surface {
+    background: transparent !important;
+    box-shadow: none !important;
+  }
+}
 .centered-dialog .mat-dialog-container {
   margin: auto !important;
   padding: 0 !important;
